# ffmpeg_example

./: README.md
build_0904_x64/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avresample.lib  avutil.lib  librtmp.lib  libx264.lib  postproc.lib  swresample.lib  swscale.lib
example/: readme.txt
example/10.3_YUV_to_h264/: 10.3_YUV_to_h264.vcxproj.filters
example/10.4_h264_to_YUV/: 10.4_h264_to_YUV.sln  10.4_h264_to_YUV.vcxproj  10.4_h264_to_YUV.vcxproj.filters
example/10.5_filtering_video/: filtering_video.vcxproj  filtering_video.vcxproj.filters
example/encode_video_x264/: encode_video_x264.sln  encode_video_x264.vcxproj  encode_video_x264.vcxproj.filters  zz__encode_video.xmind
example/ffmpeg_tool/: readme.txt  zz__h264_to_rtsp.xmind  zz__scale_video.xmind
example/muxing/: muxing.vcxproj.filters  out.flv  zz_muxing_solution.xmind
example/push_h264_to_RtmpSrv/: h264_to_rtmp.sln  h264_to_rtmp.vcxproj
example/push_h264_to_RtspSrv/: h264_to_rtsp.vcxproj  h264_to_rtsp.vcxproj.filters  readme.txt
example/remuxing/: zz_remuxing.xmind
example/scaling_video_RGB2YUV/: scaling_video_RGB2YUV.vcxproj
example/scaling_video_YUV2RGB/: scaling_video_YUV2RGB.sln  scaling_video_YUV2RGB.vcxproj  scaling_video_YUV2RGB.vcxproj.filters
example_win/: readme.txt
example_win/10.3_YUV_to_h264/: 10.3_YUV_to_h264.sln  10.3_YUV_to_h264.vcxproj
example_win/10.5_filtering_video/: filtering_video.sln  zz__filtering_video.xmind
examples_linux/: CMakeLists.txt  README.md  decode_video.c  demuxing_example.c
ffmpeg_opengl/: ffmpeg_opengl.sln
(+213 files in other folders)
